# bazel_jupyter_example

./: BUILD.bazel  LICENSE.TXT  README.md  WORKSPACE  notes.md
tools/jupyter/: jupyter_bazel.py  runfiles.py
